# glesgae

./: .gitignore  Android.mk  CHANGELOG  CMakeLists.txt  GAE_Types.c  GAE_Types.h  GLESGAETypes.cpp  GLESGAETypes.h  LICENSE  MakeGLlib.linux  MakeSDL2Lib.linux  Makelib.linux  Makeoptlib.linux  README  cmake-variants.yaml  glesgae.project
Audio/: AudioSystem.h  Sound.h
Audio/SDL2/: AudioSystem.c  Sound.c
Buffer/: Buffer.c  Buffer.h
Events/: Event.c  Event.h  EventObserver.h  EventSystem.c  EventSystem.cpp  EventSystem.h  EventTrigger.h  EventTypes.cpp  EventTypes.h  SystemEvents.h
Events/Android/: AndroidEventSystem.c  AndroidEventSystem.cpp  AndroidEventSystem.h  AndroidEvents.cpp  AndroidEvents.h
Events/SDL2/: SDL2EventSystem.c  SDL2Events.c  SDL2Events.h
Events/X11/: X11EventSystem.c  X11EventSystem.cpp  X11EventSystem.h  X11Events.cpp  X11Events.h
Examples/ApplicationLifecycleTest/: MVPUniformUpdater.cpp  MVPUniformUpdater.h  Makefile.linux  MakefileES1.pandora  TestLifecycle.cpp  TestLifecycle.h  Texture0UniformUpdater.cpp  Texture0UniformUpdater.h  main.cpp
Examples/JavaScriptTest/: Makefile.linux  MakefileES1.pandora  MakefileES2.pandora  TestJavaScriptClass.cpp  TestJavaScriptClass.h  TestLifecycle.cpp  TestLifecycle.h  main.cpp  test.js
Factories/: SpriteFactory.cpp  SpriteFactory.h
File/: File.h
File/Android/: File.c  File.cpp  File.h
File/Linux/: File.c  File.cpp  File.h
File/Win32/: File.c  File.h
Graphics/: Camera.c  Camera.cpp  Camera.h  Color.h  Colour.h  GraphicsSystem.cpp  GraphicsSystem.h  IndexBuffer.c  IndexBuffer.cpp  IndexBuffer.h  Material.c  Material.h  Mesh.c  Mesh.h  Shader.c  Shader.cpp  Shader.h  ShaderUniformUpdater.h  Sprite.h  Texture.c  Texture.cpp  Texture.h  VertexBuffer.c  VertexBuffer.cpp  VertexBuffer.h
Graphics/Context/: FixedFunctionContext.cpp  FixedFunctionContext.h  GLES1RenderContext.cpp  GLES1RenderContext.h  GLES2RenderContext.cpp  GLES2RenderContext.h  GLXRenderContext.cpp  GLXRenderContext.h  RenderContext.h  ShaderBasedContext.cpp  ShaderBasedContext.h
Graphics/Context/Android/: AndroidRenderContext.cpp  AndroidRenderContext.h
Graphics/Context/GLX/: GLXRenderContext.c  GLXRenderContext.h  GLee.c  GLee.h
Graphics/Context/Linux/: GLXRenderContext.cpp  GLXRenderContext.h  GLee.h
Graphics/Context/Pandora/: PandoraRenderContext.cpp  PandoraRenderContext.h
Graphics/Context/SDL2/: SDL2RenderContext.c  SDL2RenderContext.h
Graphics/Context/Win32/: GLee.c  GLee.h
Graphics/Platform/: RenderPlatform.h
Graphics/Platform/Android/: AndroidRenderPlatform.cpp  AndroidRenderPlatform.h
Graphics/Platform/Linux/: LinuxRenderPlatform.cpp  LinuxRenderPlatform.h
Graphics/Platform/Pandora/: PandoraRenderPlatform.cpp  PandoraRenderPlatform.h
Graphics/Platform/Win32/: GLee.c
Graphics/Renderer/: Renderer.h
Graphics/Renderer/GLES10/: FixedFunctionGlVARenderer.cpp  FixedFunctionGlVARenderer.h
Graphics/Renderer/GLES11/: FixedFunctionGlVboRenderer.cpp  FixedFunctionGlVboRenderer.h
Graphics/Renderer/GLES20/: ShaderGLVboRenderer.c  ShaderGLVboRenderer.cpp  ShaderGLVboRenderer.h
Graphics/Renderer/SDL2/: SDL2Renderer.c  SDL2Renderer.h
Graphics/Sprite/: Animation.c  Animation.h  Frame.c  Frame.h  Sprite.c  Sprite.h
Graphics/Sprite/3D/: Sprite.c  Sprite.h
Graphics/Sprite/SDL2/: Sprite.c  Sprite.h
Graphics/State/: RenderState.h
Graphics/State/GLES1/: GLES1State.cpp  GLES1State.h
Graphics/State/GLES2/: GLES2State.c  GLES2State.cpp  GLES2State.h
Graphics/State/OGL/: OGLState.cpp  OGLState.h
Graphics/System/SDL2/: SDL2GraphicsSystem.c
Graphics/System/X11/: X11GraphicsSystem.c
Graphics/Texture/GL/: GLTexture.c  GLTexture.h
Graphics/Texture/SDL2/: SDL2Texture.c  SDL2Texture.h
Graphics/Window/: RenderWindow.h  X11RenderWindow.cpp  X11RenderWindow.h
Graphics/Window/Android/: AndroidRenderWindow.c  AndroidRenderWindow.cpp  AndroidRenderWindow.h
Graphics/Window/SDL2/: SDL2RenderWindow.c  SDL2RenderWindow.h
Graphics/Window/X11/: X11RenderWindow.c  X11RenderWindow.cpp  X11RenderWindow.h
Input/: Controller.c  Controller.h  ControllerTypes.cpp  ControllerTypes.h  InputSystem.h  Joystick.h  Keyboard.cpp  Keyboard.h  Pad.h  Pointer.h
Input/Android/: AndroidInputSystem.cpp  AndroidInputSystem.h
Input/Linux/: LinuxInputSystem.c  LinuxInputSystem.cpp  LinuxInputSystem.h
Input/Pandora/: PandoraInputSystem.cpp  PandoraInputSystem.h  pnd_io_evdev.h
Input/SDL2/: SDL2InputSystem.c  SDL2InputSystem.h
Maths/: Matrix.c  Matrix.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Point.c  Point.h  Rect.c  Rect.h  Vector.c  Vector.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Platform/: Application.cpp  Application.h  Lifecycle.h  Platform.h
Platform/Android/: AndroidLifecycle.h  AndroidPlatform.cpp  AndroidPlatform.h
Platform/Linux/: LinuxLifecycle.h  LinuxPlatform.h
Platform/Pandora/: PandoraLifecycle.h
Platform/SDL2/: SDL2Platform.c  SDL2Platform.h
Plugin/: PluginSystem.h
Resources/: BaseResource.cpp  BaseResource.h  BaseResourceBank.h  Resource.cpp  Resource.h  ResourceBank.h  ResourceManager.h
Scripting/: BaseJavaScriptClass.h  JavaScriptClass.h  JavaScriptContext.cpp  JavaScriptContext.h  Makelib.javascript.linux  Makelib.javascriptcore.linux  Makelib.spidermonkey.linux64  Makeoptlib.javascript.linux  Makeoptlib.javascriptcore.linux  ScriptSystem.h
Scripting/JavaScript/: BaseJavaScriptClass.h  JavaScriptClass.h  JavaScriptContext.cpp  JavaScriptContext.h  JavaScriptTimedFunction.cpp  JavaScriptTimedFunction.h
States/: State.c  State.h  StateStack.c  StateStack.cpp  StateStack.h
Time/: Clock.h  Timer.c  Timer.cpp  Timer.h
Time/Android/: Clock.c  Clock.cpp
Time/Linux/: Clock.c
Time/Win32/: Clock.c
Utils/: Array.c  Array.h  ArrayList.c  ArrayList.h  Group.c  Group.h  HashString.c  HashString.cpp  HashString.h  Heap.c  Heap.h  List.c  List.h  Logger.c  Logger.cpp  Logger.h  Map.c  Map.h  Sprite.cpp  Sprite.h
Utils/Tiled/: TiledJsonLoader.c  TiledJsonLoader.h
jni/: Android.mk  Application.mk
(+26 files in other folders)
